Added index template

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Rustem's portfolio</title>
+		<title>Rustem portfolio</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<link rel="stylesheet" type="text/css" href="static/semantic/dist/semantic.min.css">
