Added links to the icons

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,22 +8,22 @@
 		<header class="ui block header segment">
 			<img class="ui left floated small circular image" src="static/img/avatar.jpg">
 			<div class="left floated">
-			  	<h1>Rustem Vorozheykin</h1>
+			  	<h1>Rustem Vorozheykin</h1> 
 			  	<h3>Python/Frontend developer. Tester</h3>
 			  	<div class="ui massive horizontal list">
-			  		<a href="#">
+			  		<a href="https://vk.com/te7ris">
 						<i class="vk icon"></i>
 					</a>
-			  		<a href="#">
+			  		<a href="https://ru.linkedin.com/in/rustem-vorozheykin">
 						<i class="linkedin icon item"></i>
 					</a>
-			  		<a href="#">
+			  		<a href="skype:stifan_100?chat">
 						<i class="skype icon item"></i>
 					</a>
-			  		<a href="#">
+			  		<a href="https://www.instagram.com/_te7ris/">
 						<i class="instagram icon item"></i>
 					</a>
-			  		<a href="#">
+			  		<a href="https://github.com/VorojeikinRustem">
 						<i class="github icon item"></i>
 					</a>
 			  	</div>
