--- a/templates/index.html
+++ b/templates/index.html
@@ -35,4 +35,5 @@
 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   
 		crossorigin="anonymous"></script>
 	<script src="static/semantic/dist/semantic.min.js"></script>
+	<script src="static/js/scripts.js"></script>
 </html>
