Added languages switcher

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,11 @@
 	</head>
 	<link rel="stylesheet" type="text/css" href="static/semantic/dist/semantic.min.css">
 	<body>
-		<header class="ui block header segment">
-			<img class="ui left floated small circular image" src="static/img/avatar.jpg">
-			<div class="left floated">
+		<header class="ui block grid header container">
+			<div class="three wide column">
+				<img class="ui left floated small circular image" src="static/img/avatar.jpg">
+			</div>
+			<div class="nine wide column">
 			  	<h1>Rustem Vorozheykin</h1> 
 			  	<h3>Python/Frontend developer. Tester</h3>
 			  	<div class="ui massive horizontal list">
@@ -28,6 +30,16 @@
 					</a>
 			  	</div>
 		  	</div>
+			<div class="three wide column middle aligned content">
+				<div class="ui secondary vertical pointing menu">
+					<a class="item lang-own active">
+						<i class="ru flag"></i>Russian
+					</a>
+					<a class="item lang-own">
+						<i class="us flag"></i>English
+					</a>
+				</div>
+			</div>
 		</header>
 	</body>
 	<script   
