--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,18 @@
 				</div>
 			</div>
 		</header>
+
+		<section>
+		</section>
+		<article>
+
+		</article>
+		<aside>
+
+		</aside>
+		<footer>
+
+		</footer>
 	</body>
 	<script   
 		src="https://code.jquery.com/jquery-3.1.1.min.js"   
