Working with 'portfolio'

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,104 @@
 	</head>
 	<link rel="stylesheet" type="text/css" href="static/semantic/dist/semantic.min.css">
 	<body>
-		<header class="ui block grid header container">
+
+		<!-- Service -->
+		<div class="ui vertical stripe segment">
+			<div class="ui text container center aligned">
+				<h3>Service</h3>
+				<div class="ui grid">
+					<div class="five wide column">
+						<h4>E-Commerce</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+					</div>
+					<div class="six wide column">
+						<h4>Responsive Design</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+					</div>
+					<div class="five wide column">
+						<h4>Web Security</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+<div class="modal-test">Click me</div>
+
+<div class="ui modal">
+  <div class="header">Header</div>
+  <div class="content">
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+</div>
+
+
+		<!-- Portfolio -->
+		<div class="ui vertical stripe segment">
+			<div class="ui text container center aligned">
+				<h3>Portfolio</h3>
+				<div class="ui three stackable special cards">
+					<a class="orange card">
+						<div class="image blurring dimmable image">
+							<div class="ui dimmer">
+								<div class="content">
+									<div class="center">
+										<div class="ui inverted button">Add Friend</div>
+									</div>
+								</div>
+							</div>
+							<img src="static/img/portfolio/checkout.png">
+						</div>
+					</a>
+					<a class="red card">
+						<div class="image blurring dimmable image">
+							<div class="ui dimmer">
+								<div class="content">
+									<div class="center">
+										<div class="ui inverted button">Add Friend</div>
+									</div>
+								</div>
+							</div>
+							<img src="static/img/portfolio/course_work.png">
+						</div>
+					</a>
+					<div class="card">
+						<div class="image">
+							<img src="static/img/portfolio/csc_1.png">
+						</div>
+					</div>
+					<div class="card">
+						<div class="image">
+							<img src="static/img/portfolio/dashboard-1.png">
+						</div>
+					</div>
+					<div class="card">
+						<div class="image">
+							<img src="static/img/portfolio/diploma.png">
+						</div>
+					</div>
+					<div class="card">
+						<div class="image">
+							<img src="static/img/portfolio/shop4.png">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- About -->
+		<div class="ui vertical stripe segment center aligned">
+			<div class="ui text container">
+				<h3>About</h3>
+				<p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
+			</div>
+		</div>
+
+
+		<!-- <header class="ui block grid header container">
 			<div class="three wide column">
 				<img class="ui left floated small circular image" src="static/img/avatar.jpg">
 			</div>
@@ -42,8 +139,10 @@
 			</div>
 		</header>
 
-		<section>
-		</section>
+		<div class="ui main container">
+		some text
+
+		</div>
 		<article>
 
 		</article>
@@ -52,7 +151,7 @@
 		</aside>
 		<footer>
 
-		</footer>
+		</footer> -->
 	</body>
 	<script   
 		src="https://code.jquery.com/jquery-3.1.1.min.js"   
