Added 'Zoom' icon to portfolio image

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
 			</div>
 		</div>
 
+<!--  visible active" style="display: block !important" -->
 
 		<!-- Portfolio -->
 		<div class="ui vertical stripe segment">
@@ -50,7 +51,9 @@
 							<div class="ui dimmer">
 								<div class="content">
 									<div class="center">
-										<div class="ui inverted button modal-test">Add Friend</div>
+										<div class="ui circular massive icon button inverted button modal-test">
+											<i class="zoom icon"></i>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -70,7 +73,9 @@
 							<div class="ui dimmer">
 								<div class="content">
 									<div class="center">
-										<div class="ui inverted button">Add Friend</div>
+										<div class="ui inverted button">
+											<i class="zoom icon"></i>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -132,7 +137,7 @@
 					<div class="ui divider"></div>
 					<textarea></textarea>
 					<div class="ui divider"></div>
-					<button class="ui submit button" type="submit">Submit</button>
+					<button class="ui fluid submit button" type="submit">Submit</button>
 				</form>
 <!-- 
 				<div class="ui massive horizontal list">
