Added social icons

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 
-<!--  visible active" style="display: block !important" -->
+<!-- temporarily visible active" style="display: block !important" -->
 
 		<!-- Portfolio -->
 		<div class="ui vertical stripe segment">
@@ -139,6 +139,34 @@
 					<div class="ui divider"></div>
 					<button class="ui fluid submit button" type="submit">Submit</button>
 				</form>
+			</div>
+		</div>
+
+
+		<!-- Copyright -->
+		<div class="ui vertical stripe segment center aligned">
+			<div class="ui text container">
+				<div class="ui massive horizontal list">
+			  		<a href="https://vk.com/te7ris">
+						<i class="yellow circular inverted vk icon"></i>
+					</a>
+			  		<a href="https://ru.linkedin.com/in/rustem-vorozheykin">
+						<i class="orange circular inverted linkedin icon item"></i>
+					</a>
+			  		<a href="skype:stifan_100?chat">
+						<i class="green circular inverted skype icon item"></i>
+					</a>
+			  		<a href="https://www.instagram.com/_te7ris/">
+						<i class="blue circular inverted instagram icon item"></i>
+					</a>
+			  		<a href="https://github.com/VorojeikinRustem">
+						<i class="lightblue circular inverted github icon item"></i>
+					</a>
+			  	</div>
+			</div>
+		</div>
+
+				
 <!-- 
 				<div class="ui massive horizontal list">
 			  		<a href="https://vk.com/te7ris">
