--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,6 @@
 
-// Custom styles are created with prefix - own-
+/* Custom styles are created with prefix - own- */
+
 .own-service {
 	margin-top: 5rem !important;
 }
