--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,30 @@
 			</div>
 		</div>
 
+		<!-- Skills -->
+		<div class="ui vertical stripe segment center aligned">
+			<div class="ui text container">
+				<h3>Skills</h3>
+				<ul>
+					<li class="ui label">Selenium</li>
+					<li class="ui label">Responsive design</li>
+					<li class="ui label">HTML5</li>
+					<li class="ui label">CSS3</li>
+					<li class="ui label">Bootstrap</li>
+					<li class="ui label">Python</li>
+					<li class="ui label">Django</li>
+					<li class="ui label">JavaScript</li>
+					<li class="ui label">jQuery</li>
+					<li class="ui label">PostgreSQL</li>
+					<li class="ui label">Git</li>
+					<li class="ui label">Кроссбраузерная верстка</li>
+					<li class="ui label">MongoDB</li>
+					<li class="ui label">Linux</li>
+				</ul>
+			</div>
+		</div>
+
+
 <!-- temporarily visible active" style="display: block !important" -->
 
 		<!-- Portfolio -->
