Added main block with parallax

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,60 @@
 					<a href="#skills" class="item">Навыки</a>
 					<a href="#portfolio" class="item">Портфолио</a>
 					<a href="#about" class="item">Обо мне</a>
+					<a href="#about2" class="item">Обо мне2</a>
 					<a href="#contact" class="item">Связаться</a>
 				</div>
 			</div>
 		</div>
 
+        <div class="own-clearfix"></div>
+        
+        <!-- Main -->
+		<div id="about2" class="ui vertical stripe center aligned segment own-main">
+			<div class="ui text container">
+                <img class="ui centered medium circular image" src="static/img/avatar.jpg">
+                <h1>Ворожейкин Рустем Вахидович</h1>
+                <h2>Фронтенд/Python разработчик. Тестировщик.</h2>
+			</div>
+		</div>
+		<!-- About -->
+		<div id="about" class="ui vertical stripe segment">
+			<div class="ui text container">
+				<h2 class="ui center aligned header">Обо мне</h2>
+                <div class="ui items">
+                    <div class="item">
+                        <div class="image">
+                            <img src="static/img/avatar.jpg">
+                        </div>
+                        <div class="content">
+                            <h3>Ворожейкин Рустем Вахидович</h3>
+                            <div class="meta">
+                                <span>Фронтенд/Python разработчик. Тестировщик.</span>
+                            </div>
+                                <div class="description">
+                                <p></p>
+                            </div>
+                            <div class="extra">
+                                I am a Python/Front-end developer and Tester. I have experience with Selenium / HTML5 / CSS3 / jQuery / Python / Django. I got a Bachelor of Science in Applied Informatics from Crimean Engineering and Pedagogical University. I am a hard worker and enjoy working at all critical conditions. If hired by you I will be responsible to complete the task within the stipulated time frame and with utmost confidence. Outsource me for your project and I promise to bring in the best output.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				
+				<h4>Areas of Expertise</h4>
+				<ul>
+					<li>Selenium tests</li>
+					<li>HTML5, CSS3, jQuery</li>
+					<li>Python, Django</li>
+					<li>PSD to HTML Conversion</li>
+					<li>HTML5 Responsive Expert</li>
+					<li>Bootstrap, foundation, SemanticUI</li>
+				</ul>
+			</div>
+		</div>
+
 		<!-- Service -->
-		<div id="services" class="ui vertical stripe segment own-service">
+		<div id="services" class="ui vertical stripe segment">
 			<div class="ui text container center aligned">
 				<h2>Услуги</h2>
 				<div class="ui grid">
@@ -136,23 +183,6 @@
 			</div>
 		</div>
 
-		<!-- About -->
-		<div id="about" class="ui vertical stripe segment">
-			<div class="ui text container">
-				<h2 class="ui center aligned header">Обо мне</h2>
-				<p>I am a Python/Front-end developer and Tester. I have experience with Selenium / HTML5 / CSS3 / jQuery / Python / Django. I got a Bachelor of Science in Applied Informatics from Crimean Engineering and Pedagogical University. I am a hard worker and enjoy working at all critical conditions. If hired by you I will be responsible to complete the task within the stipulated time frame and with utmost confidence. Outsource me for your project and I promise to bring in the best output.</p>
-				<h4>Areas of Expertise</h4>
-				<ul>
-					<li>Selenium tests</li>
-					<li>HTML5, CSS3, jQuery</li>
-					<li>Python, Django</li>
-					<li>PSD to HTML Conversion</li>
-					<li>HTML5 Responsive Expert</li>
-					<li>Bootstrap, foundation, SemanticUI</li>
-				</ul>
-			</div>
-		</div>
-
 		<!-- Contact us -->
 		<div id="contact" class="ui vertical stripe center aligned inverted segment">
 			<div class="ui text container">
@@ -185,7 +215,7 @@
 		<!-- Copyright -->
 		<div class="ui vertical stripe segment center aligned">
 			<div class="ui text container">
-				<div class="ui massive horizontal list">
+				<div class="ui large horizontal list">
 			  		<a target="_blank" href="https://vk.com/te7ris">
 						<i class="yellow circular inverted vk icon"></i>
 					</a>
@@ -283,5 +313,6 @@
 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   
 		crossorigin="anonymous"></script>
 	<script src="static/semantic/dist/semantic.min.js"></script>
+    <script src="static/parallax/parallax.min.js"></script>
 	<script src="static/js/scripts.js"></script>
 </html>
