--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 
 /* Custom styles are created with prefix - own- */
 
-.own-service {
+.own-clearfix {
 	margin-top: 5rem !important;
 }
 
@@ -18,6 +18,24 @@
     box-sizing: border-box;
 }
 
+.own-main {
+    padding: 10% 0 15% 0	 !important;     
+    color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
+    
+    /* 
+		background-image: url('/static/img/background/background-3.jpg') !important;
+    background-attachment: local !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+		*/
+
+}
+
+.own-main img {
+	width: 40% !important;
+}
 
 img {
     width: 100%;
