Some changes. Fabric, json etc.

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,9 @@
                 {% endfor %}
 				<div class="ui three stackable special cards">
 					<a class="orange card">
+						<div class="ui top attached blue label">Frontend</div>
 						<div class="image blurring dimmable image">
+							
 							<div class="ui dimmer">
 								<div class="content">
 									<div class="center">
@@ -136,7 +138,7 @@
 							<img src="static/img/portfolio/checkout.png">
 						</div>
 						<div class="ui modal">
-							<div class="header">Header</div>
+							<div class="header">Frontend</div>
                                 <img src="static/img/portfolio/checkout.png">
                             <div class="content">
                                 <p>1</p>
@@ -161,6 +163,7 @@
 					</a>
 					<div class="card">
 						<div class="image">
+							<div class="ui top attached label">HTML</div>
 							<img src="static/img/portfolio/csc_1.png">
 						</div>
 					</div>
