--- a/templates/index.html
+++ b/templates/index.html
@@ -21,73 +21,37 @@
 			</div>
 		</div>
 
-        <div class="own-clearfix"></div>
+        <!--<div class="own-clearfix"></div>-->
         
         <!-- Main -->
 		<div id="about2" class="ui vertical stripe center aligned segment own-main">
 			<div class="ui text container">
                 <img class="ui centered medium circular image" src="static/img/avatar.jpg">
-                <h1>Ворожейкин Рустем Вахидович</h1>
-                <h2>Фронтенд/Python разработчик. Тестировщик.</h2>
+                <h1>Фронтенд/Python разработчик. Тестировщик.</h1>
+                <h2>Фрилансер Ворожейкин Рустем Вахидович</h2>
 			</div>
 		</div>
 		
-		<!-- About -->
-		<div id="about" class="ui vertical stripe segment">
-			<div class="ui text container">
-				<h2 class="ui center aligned header">Обо мне</h2>
-                <div class="ui items">
-                    <div class="item">
-                        <div class="content">
-                            <h3>Ворожейкин Рустем Вахидович</h3>
-                            <div class="meta">
-                                <span>Фронтенд/Python разработчик. Тестировщик.</span>
-                            </div>
-                                <div class="description">
-                                <p></p>
-                            </div>
-                            <div class="extra">
-                                I am a Python/Front-end developer and Tester. I have experience with Selenium / HTML5 / CSS3 / jQuery / Python / Django. I got a Bachelor of Science in Applied Informatics from Crimean Engineering and Pedagogical University. I am a hard worker and enjoy working at all critical conditions. If hired by you I will be responsible to complete the task within the stipulated time frame and with utmost confidence. Outsource me for your project and I promise to bring in the best output.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-				
-				<h4>Areas of Expertise</h4>
-				<ul>
-					<li>Selenium tests</li>
-					<li>HTML5, CSS3, jQuery</li>
-					<li>Python, Django</li>
-					<li>PSD to HTML Conversion</li>
-					<li>HTML5 Responsive Expert</li>
-					<li>Bootstrap, foundation, SemanticUI</li>
-				</ul>
+		<!-- Services -->
+		<div id="services" class="ui vertical stripe segment">
+			<div class="ui text container center aligned">
+				<h2>Услуги</h2>
+				<div class="ui three column stackable grid">
+					<div class="column">
+						<h4>Тестирование. Автоматизация задач на сайте.</h4>
+						<p>Разрабатываю тесты на драйвере selenium на python. Сталкивался с большим количеством багов в браузерах при взаимодействии с selenium. Решал данные проблемы. Автоматизация задач на сайте.</p>
+					</div>
+					<div class="column">
+						<h4>Адаптивная, кроссбраузерная верстка</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+					</div>
+					<div class="column">
+						<h4>Backend python разработчик</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+					</div>
+				</div>
 			</div>
 		</div>
-
-		<!-- Skills -->
-		<div id="skills" class="ui vertical stripe segment center aligned">
-			<div class="ui text container">
-				<h2>Навыки</h2>
-				<ul class="own-skills-list">
-					<li class="ui label">Selenium</li>
-					<li class="ui label">Responsive design</li>
-					<li class="ui label">HTML5</li>
-					<li class="ui label">CSS3</li>
-					<li class="ui label">Bootstrap</li>
-					<li class="ui label">Python</li>
-					<li class="ui label">Django</li>
-					<li class="ui label">JavaScript</li>
-					<li class="ui label">jQuery</li>
-					<li class="ui label">PostgreSQL</li>
-					<li class="ui label">Git</li>
-					<li class="ui label">Кроссбраузерная верстка</li>
-					<li class="ui label">MongoDB</li>
-					<li class="ui label">Linux</li>
-				</ul>
-			</div>
-		</div>
-
 
 		<!-- Portfolio -->
 		<div id="portfolio" class="ui vertical stripe segment">
@@ -125,22 +89,81 @@
 			</div>
 		</div>
 
-		<!-- Service -->
-		<div id="services" class="ui vertical stripe segment">
-			<div class="ui text container center aligned">
-				<h2>Услуги</h2>
-				<div class="ui three column stackable grid">
-					<div class="column">
-						<h4>Тестирование. Автоматизация задач на сайте.</h4>
-						<p>Разрабатываю тесты на драйвере selenium на python. Сталкивался с большим количеством багов в браузерах при взаимодействии с selenium. Решал данные проблемы. Автоматизация задач на сайте.</p>
-					</div>
-					<div class="column">
-						<h4>Адаптивная, кроссбраузерная верстка</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-					</div>
-					<div class="column">
-						<h4>Backend python разработчик</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+		<!-- Skills -->
+		<div id="skills" class="ui vertical stripe segment center aligned">
+			<div class="ui text container">
+				<h2>Навыки</h2>
+				<ul class="own-skills-list">
+					{% for skill in skills %}
+						<li class="ui label">{{ skill }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+
+
+		<!-- About -->
+		<div id="about" class="ui vertical stripe segment">
+			<div class="ui text container">
+				<h2 class="ui center aligned header">Обо мне</h2>
+                <div class="ui items">
+                    <div class="item">
+                        <div class="content">
+                            <h3>Фронтенд/Python разработчик. Тестировщик.</h3>
+                            <div class="meta">
+                                <span>Фрилансер Ворожейкин Рустем Вахидович</span>
+                            </div>
+                                <div class="description">
+                                <p></p>
+                            </div>
+                            <div class="extra">
+                                I am a Python/Front-end developer and Tester. I have experience with Selenium / HTML5 / CSS3 / jQuery / Python / Django. I got a Bachelor of Science in Applied Informatics from Crimean Engineering and Pedagogical University. I am a hard worker and enjoy working at all critical conditions. If hired by you I will be responsible to complete the task within the stipulated time frame and with utmost confidence. Outsource me for your project and I promise to bring in the best output.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				
+				<h4>Areas of Expertise</h4>
+				<ul>
+					<li>Selenium tests</li>
+					<li>HTML5, CSS3, jQuery</li>
+					<li>Python, Django</li>
+					<li>PSD to HTML Conversion</li>
+					<li>HTML5 Responsive Expert</li>
+					<li>Bootstrap, foundation, SemanticUI</li>
+				</ul>
+			</div>
+		</div>
+
+		
+
+		<!-- Testimonials -->
+		<div id="testimonials" class="ui vertical stripe segment">
+			<div class="ui text container">
+				<h2 class="ui center aligned header">Отзывы</h2>
+                <div class="ui relaxed divided items">
+					<div class="item">
+						<div class="content">
+							<a class="header">Backend разработчик на Python</a>
+							<div class="description">
+								Отличный Python программист! Помог нам с dashboard, nginx, django, mongoDB, fabric и прочее.
+							</div>
+							<div class="extra">
+								Алексей Воробьев
+								<a href="https://www.fl.ru/users/te7ris/opinions/#p_160764-2"><i class="linkify icon"></i></a>
+							</div>
+						</div>
+					</div><div class="item">
+						<div class="content">
+							<h3>Исправление проблем в верстке</h3>
+							<div class="description">
+								Рустем, грамотный специалист, довольно быстро понял проблему и также быстро нашел решение, которого никак не удавалось найти, в общении приятен и вежлив, внимателен к деталям. Рекомендую.
+							</div>
+							<div class="extra">
+								Василий Ларионов
+								<a href="https://freelansim.ru/freelancers/te7ris/opinions"><i class="linkify icon"></i></a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
